// order-service/order.proto

syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
  rpc GetOrder (OrderQuery) returns (OrderResponse);
}

message OrderRequest {
  double amount = 1;
}

message OrderQuery {
  string order_id = 1;
}

message OrderResponse {
  string id = 1;
  double amount = 2;
  string status = 3;
}